# DWA_traj

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  plot_drone_dwa.py
20251230_1530_FlairGCS/: all_logs.csv  all_logs.txt  ugv_0_changes_at_1767105001957131000.xml  ugv_0_changes_at_1767105006493323000.xml  ugv_0_changes_at_1767105022445498000.xml  ugv_0_controls.csv  ugv_0_controls.dbt  ugv_0_controls.txt  ugv_0_setup.xml  ugv_0_target.csv  ugv_0_target.dbt  ugv_0_target.txt  ugv_0_u_x.csv  ugv_0_u_x.dbt  ugv_0_u_x.txt  ugv_0_u_y.csv  ugv_0_u_y.dbt  ugv_0_u_y.txt  ugv_0_ugv_0.csv  ugv_0_ugv_0.dbt  ugv_0_ugv_0.txt
simulator/: CMakeLists.txt
simulator/resources/core2-64/: run.flair  simulator.sh  simulator.xml
simulator/src/: main.cpp
ugv/: CMakeLists.txt
ugv/resources/core2-64/: setup_simu.xml  setup_sumo.xml  ugv_simu.sh  ugv_sumo.sh
ugv/src/: dwa2Dtrajectory.cpp  dwa2Dtrajectory.h  dwa2Dtrajectory_impl.cpp  dwa2Dtrajectory_impl.h  dwatraj.cpp  dwatraj.h  main.cpp
